einstellung_derive/src/trybuild_tests/invalid_merge_foo.stderr
error: Unknown value: `foo`. Available values: `extend`, `function`, `replace`
 --> src/trybuild_tests/invalid_merge_foo.rs
  |
  |     #[config(merge = "foo")]
  |                      ^^^^^
